# mmap

./: mmap.cabal  stack.yaml
src/Data/Map/: Monoidal.hs
src/Data/Set/: NonEmpty.hs
src/Examples/: Counter.hs  TripleStore.hs
