Name:          mmap
Version:       0.1.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
License:       MIT
Copyright:     © 2019 Lars Bruenjes
Author:        Lars Bruenjes
Maintainer:    brunjlar@gmail.com
Stability:     provisional
Synopsis:      monoidal maps
Description:   monoidal maps
Category:      functional data structures

library
    exposed-modules:
          Data.Map.Monoidal
        , Examples.Counter
        , Examples.TripleStore
    build-depends:
          base >= 4.11 && < 5
        , containers
        , optics-core
        , optics-th
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
